# photos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
photodb/: model.py  run.py  scanner.py
photodb/web/: app.py
photodb/web/resources/: __init__.py  albums.py  photos.py  react.py  scanner.py
photos/: __init__.py  cli.py  config.py  model.py  run.py  scanner.py  wsgi.py
photos-ui/: package-lock.json  package.json
photos-ui/public/: index.html
photos-ui/src/: App.js  index.js
photos-ui/src/components/: PhotosAPI.js  bulma.js  dropdown.js  gallery.js  modals.js  navbar.js  paging.js  photobox.js  photos.css  photos.js  photosview.js  slideshow.js  toolbar.js  utils.js
photos-ui/src/css/: masonry.css  photos.css
photos/tests/: conftest.py  test_db.py  test_scanner.py
photos/web/: app.py
photos/web/resources/: __init__.py  albums.py  photos.py  scanner.py  utils.py
tests/: test_db.py  test_scanner.py
